fix(frontend): :lipstick: overflow issue

--- a/frontend/src/app/dashboard/neues-album/neues-album.module.scss
+++ b/frontend/src/app/dashboard/neues-album/neues-album.module.scss
@@ -1,5 +1,5 @@
 .main {
-  height: 100%;
+  height: calc(100% - 14rem);
   .container {
     width: 100%;
     height: 100%;
