--- a/frontend/src/components/CreateEditAlbum/CreateEditAlbum.module.scss
+++ b/frontend/src/components/CreateEditAlbum/CreateEditAlbum.module.scss
@@ -3,10 +3,11 @@
 .albumWrapper {
   display: flex;
   gap: 3rem;
-  height: calc(100% - 40px - 2rem);
+  height: calc(100% - 3rem);
+  box-sizing: border-box;
   .albumSidePanel {
     width: 346px;
-    height: calc(100% - 4rem);
+    height: 100%;
     flex-grow: 0;
     flex-shrink: 0;
     gap: 3rem;
@@ -32,12 +33,12 @@
 
   .imageSelectionWrapper {
     flex-grow: 1;
-    height: calc(100% - 4rem);
+    height: 100%;
     background-color: $bg-secondary;
     border-radius: $border-radius;
     box-sizing: border-box;
     padding: 2rem;
-    overflow-y: hidden;
+    overflow-y: scroll;
 
     .imageSelection {
       display: grid;
